--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Rancho&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
+*{
+  margin-top: 5px;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+/*******************Header**************/
+body{
+  /*overflow: hidden;*/
+  background: white;
   min-height: 100vh;
+}
+.header{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 30px, 100px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  z-index: 1000;
+}
+.logo{
+  color: #094b65;
+  font-weight: 700;
+  font-size: 2em;
+}
+.list {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+.list >li {
+  list-style-type: none;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.list >li >a {
+  color: #094b65;
+  padding: 6px 20px;
+  border-radius: 20px;
+}
+.list > li >a.active,
+.list >li >a:hover {
+  background: #094b65;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.section{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section::before{
+  content: '';
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 100px;
+   background: linear-gradient(to top, #094b65,transparent);
+   z-index: 10;
+ }
+.section >img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+}
+.section .text{
+  position: absolute;
+  color: #094b65;
+  font-size: 10vw;
+  text-align: center;
+  line-height: 0.55em;
+  font-family: 'Rancho', cuirsive;
+  transform: translateY(-50%);
+}
+.section .text >span {
+  font-size: 0.20em;
+  letter-spacing: 2px;
+  font-weight: 400;
+  font-family: 'Poppins', sans-serif;
+}
+.btn {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 30px;
+  background: #fff;
+  color: #094b65;
+  font-size: 1.2rem;
+  font-weight: 500px;
+  letter-spacing: 2px;
+  border-radius: 40px;
+  transform: translateY(100px);
+}
+.sec{
+  background: #094b65;
 }
