--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Rancho&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
 *{
-  margin-top: 5px;
+  margin-top: 0;
   padding: 0;
   box-sizing: border-box;
 }
@@ -23,9 +23,9 @@ body{
   z-index: 1000;
 }
 .logo{
-  color: #094b65;
-  font-weight: 700;
-  font-size: 2em;
+  margin-left: 10%;
+  width:140px;
+  height: 80px;
 }
 .list {
   display: flex;
@@ -55,16 +55,7 @@ body{
   justify-content: center;
   align-items: center;
 }
-.section::before{
-  content: '';
-   position: absolute;
-   bottom: 0;
-   left: 0;
-   width: 100%;
-   height: 100px;
-   background: linear-gradient(to top, #094b65,transparent);
-   z-index: 10;
- }
+
 .section >img {
   position: absolute;
   top: 0;
@@ -76,6 +67,8 @@ body{
 }
 .section .text{
   position: absolute;
+  top: 70%;
+  left: 40%;
   color: #094b65;
   font-size: 10vw;
   text-align: center;
